--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "checks": "vue-tsc && npm run lint"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.5",
     "pinia": "^3.0.3",
-    "reka-ui": "^2.5.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.4.0",
     "vue": "^3.5.18"
   },
   "devDependencies": {
